--- a/stress-checker.html
+++ b/stress-checker.html
@@ -59,13 +59,13 @@
 
   <div class="container">
     <div class="row row-cols-3 row-cols-md-1 g-4">
-        <h1 class="display-6">How Stressed are You Feeling?</h1>
+        <h1 class="display-6">How much of a panic are you in?</h1>
             <label for="input1" class="form-label">Example range</label>
             <input type="range" class="form-range" min="0" max="5" step="0.5" id="input1">
-        <h1 class="display-6">How Stressed are You Feeling?</h1>
+        <h1 class="display-6">How overwhelmed are you feeling?</h1>
             <label for="input2" class="form-label">Example range</label>
             <input type="range" class="form-range" min="0" max="5" step="0.5" id="input2">
-        <h1 class="display-6">How Stressed are You Feeling?</h1>
+        <h1 class="display-6">How has your ability to cope with stress been?</h1>
             <label for="input3" class="form-label">Example range</label>
             <input type="range" class="form-range" min="0" max="5" step="0.5" id="input3">
     </div>
