--- a/text/footer.html
+++ b/text/footer.html
@@ -1,5 +1,3 @@
-
-
 <footer class="navbar navbar-expand-lg navbar-dark bg-success sticky-bottom">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -9,12 +7,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active " aria-current="page" id="nav-user-name"></a>
+                    <a class="nav-link active" aria-current="page" id="nav-user-name"></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="main.html">About Us</a>
+                    <a class="nav-link active" aria-current="page" href="aboutus.html">About Us</a>
                 </li>
+            </ul>
+            <img src="images/instagram_733614.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+            <img src="images/facebook_739237.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+            <img src="images/twitter_733635.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+        </div>
     </div>
+</footer>
 
 <script>
     function navUserName() {
