--- a/activities-main.html
+++ b/activities-main.html
@@ -44,7 +44,7 @@
     <!------------------------------>
     <!-- Stuff for body goes here -->
 
-    <div class="container-fluid bg-light text-dark p-5">
+    <div class="container-fluid bg-light text-dark p-5 extra">
         <div class="container bg-light p-5">
             <h1 class="display-4">Okay <span id="name-goes-here"></span>, let's get to WORK!</h1>
         </div>
