--- a/calendar.html
+++ b/calendar.html
@@ -122,24 +122,7 @@
   <!---------------------------------------------->
 
   <!-- Link to scripts of your own -->
-  <!-- <script src="./scripts/script.js"></script> -->
-
-
-  <!-- <script>
-      document.getElementById('ok-button').addEventListener('click', function() {
-        const eventName = document.getElementById('name').value;
-        const eventTime = Number(document.getElementById('count').value);
-
-        db.collection("Calendar").doc("Event").set({
-          name: eventName,
-          hours: eventTime
-        }).then(() => {
-          console.log('Event information sent to Firebase');
-        }).catch((error) => {
-          console.error('Error sending Event information to Firebase', error);
-        });
-      });
-    </script> -->
+  <script src="./scripts/script.js"></script> 
   <script src="./scripts/firebaseAPI_BBY29.js"></script>
   <script src="./scripts/skeleton.js"></script>
   <script src="./scripts/main.js"></script>
