--- a/done.html
+++ b/done.html
@@ -12,6 +12,7 @@
   <!-- Bootstrap Library CSS CDN go here -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="/images/956860-200.png" rel="icon" type="image/x-icon" />
 
 
   <!--jQuery and Firebase Services-->
@@ -20,9 +21,9 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
-  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css"/>
+  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-  
+
 
   <!-- Link to styles of your own -->
   <link rel="stylesheet" href="styles/style.css">
@@ -42,7 +43,7 @@
 
   <div class="container-fluid bg-light text-dark p-5 extra">
     <div class="container bg-light p-5">
-      <h1 class="display-4">Nice Work,  <span id="name-goes-here"></span>!</h1> 
+      <h1 class="display-4">Nice Work, <span id="name-goes-here"></span>!</h1>
       <hr>
       <h2 class="lead">
         Great! Looks like you have finished all of your activities for the day!
