--- a/activities-main.html
+++ b/activities-main.html
@@ -12,7 +12,10 @@
     <!-- Bootstrap Library CSS CDN go here -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="/images/956860-200.png" rel="icon" type="image/x-icon"/>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
+    <link href="/images/956860-200.png" rel="icon" type="image/x-icon" />
 
 
     <!--jQuery and Firebase Services-->
@@ -31,7 +34,7 @@
 
 </head>
 
-<body >
+<body>
 
     <!------------------------------>
     <!-- Your HTML Layout go here -->
@@ -66,7 +69,8 @@
                             <div class="card-body">
                                 <h5 class="card-title">Stress Checker</h5>
                                 <p class="card-text">Feeling stressed out? Lets get a better picture!</p>
-                                <a href="stress-checker.html" class="btn btn-primary">Let's check your stress, shall we?</a>
+                                <a href="stress-checker.html" class="btn btn-primary">Let's check your stress, shall
+                                    we?</a>
                             </div>
                         </div>
                     </div>
@@ -76,7 +80,7 @@
     </div>
 
 
-    
+
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
 
