--- a/stress-checker.html
+++ b/stress-checker.html
@@ -43,14 +43,14 @@
   <!------------------------------>
   <!-- Stuff for body goes here -->
 
-  <div class="container-fluid bg-light text-dark pt-5">
+  <div class="container-fluid bg-light text-dark pt-5 mt-5">
     <div class="container bg-light">
       <h1 class="display-4">Stress Checker - <span id="name-goes-here"></span></h1>
     </div>
   </div>
 
   <div class="container mb-4">
-    <div class="row row-cols-1 row-cols-md-1 g-4">
+    <div class="row row-cols-1 row-cols-md-1 g-4 mt-5">
       <h1 class="display-6">How much of a panic are you in?</h1>
       <label for="input1" class="form-label">Example range</label>
       <input type="range" class="form-range" min="0" max="5" step="0.5" id="input1">
