--- a/text/test_navbar.html
+++ b/text/test_navbar.html
@@ -1,3 +1,5 @@
+<!-- Used for testing but not implemented in our MVP -->
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
